[gd_scene load_steps=15 format=3 uid="uid://x386yrr6bc08"]

[ext_resource type="Script" path="res://scenes/planet_viewer.gd" id="1_8m8wx"]
[ext_resource type="Texture2D" uid="uid://bv2dbc4rx66s1" path="res://assets/images/milky_way.jpg" id="2_iiw4w"]
[ext_resource type="Shader" path="res://shaders/globe.gdshader" id="3_s63ct"]
[ext_resource type="Texture2D" uid="uid://pfevlx4rl0e3" path="res://assets/images/earth_heightmap_uhd.png" id="4_mi3ks"]
[ext_resource type="Texture2D" uid="uid://dlnr0qxc4oajm" path="res://assets/images/earth_normal_map_hd.png" id="5_jv15q"]
[ext_resource type="ArrayMesh" uid="uid://b6nm0av8ct85y" path="res://assets/models/faceted_sphere_30.obj" id="6_7gx2x"]
[ext_resource type="Script" path="res://scenes/mapRenderer.gd" id="7_xfpds"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_jeehk"]
panorama = ExtResource("2_iiw4w")

[sub_resource type="Sky" id="Sky_sugt7"]
sky_material = SubResource("PanoramaSkyMaterial_jeehk")

[sub_resource type="Environment" id="Environment_lrma2"]
background_mode = 2
background_energy_multiplier = 0.5
sky = SubResource("Sky_sugt7")

[sub_resource type="Gradient" id="Gradient_ftgvo"]
colors = PackedColorArray(0, 1, 1, 1, 0, 0, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ts5am"]
gradient = SubResource("Gradient_ftgvo")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ad70w"]
render_priority = 0
shader = ExtResource("3_s63ct")
shader_parameter/reliefFactor = 0.0
shader_parameter/heightMin = -8917.0
shader_parameter/heightMax = 8848.0
shader_parameter/seaLevel = 0.0
shader_parameter/heightMap = ExtResource("4_mi3ks")
shader_parameter/normalMap = ExtResource("5_jv15q")
shader_parameter/oceanGradientColor = SubResource("GradientTexture1D_ts5am")

[sub_resource type="LabelSettings" id="LabelSettings_vmpde"]
font_size = 64
outline_size = 32
outline_color = Color(0, 0, 0, 1)

[node name="planet_viewer" type="Node3D"]
script = ExtResource("1_8m8wx")
mouseSensitivity = 0.75

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, 0, 0.5, 0, 1, 0, -0.5, 0, -0.866025, 0, 0, 0)
light_bake_mode = 1
directional_shadow_mode = 0
sky_mode = 1

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_lrma2")

[node name="planet" type="MeshInstance3D" parent="."]
material_override = SubResource("ShaderMaterial_ad70w")
mesh = ExtResource("6_7gx2x")

[node name="countries" type="Node3D" parent="."]

[node name="cameraPivot" type="Node3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="cameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)
current = true

[node name="mapRendererViewport" type="SubViewport" parent="."]
disable_3d = true
transparent_bg = true
snap_2d_transforms_to_pixel = true
snap_2d_vertices_to_pixel = true
size = Vector2i(5400, 2700)

[node name="mapRenderer" type="Control" parent="mapRendererViewport"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("7_xfpds")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LoadingUI" type="CanvasLayer" parent="."]
layer = 2

[node name="Control" type="Control" parent="LoadingUI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="LoadingUI/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="Label" type="Label" parent="LoadingUI/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Loading Countries..."
label_settings = SubResource("LabelSettings_vmpde")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="draw" from="mapRendererViewport/mapRenderer" to="." method="_on_map_renderer_draw"]
